objects/Portal_Page__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <label>Chatter Group</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show the name on the drop down list in the header</description>
        <label>Customer Portal dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Title__c</fullName>
        <label>Image Title</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Join_WebEx_meeting__c</fullName>
        <label>Join WebEx meeting</label>
        <length>2550</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Join_by_phone__c</fullName>
        <label>Join by phone</label>
        <length>2550</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Main_Content__c</fullName>
        <description>This field is to display the body content .</description>
        <label>Main Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Portal_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to determine the page hierarchy for the portal menu.</description>
        <inlineHelpText>This field is used to determine the page hierarchy for the portal menu.</inlineHelpText>
        <label>Parent Portal Page</label>
        <referenceTo>Portal_Page__c</referenceTo>
        <relationshipLabel>Portal Pages</relationshipLabel>
        <relationshipName>Portal_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scrolling_Message__c</fullName>
        <label>Scrolling Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tab_Order__c</fullName>
        <label>Tab Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field is used to display the Title on the page.</description>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webex_url__c</fullName>
        <label>Webex url</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Portal Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Page_Name__c</columns>
        <columns>Chatter_Group__c</columns>
        <columns>Parent_Portal_Page__c</columns>
        <columns>Tab_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Portal Page  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>